force-app/main/default/objects/Product2/fields/AssociadoTabelaPulicado__c.field-meta.xml
<CustomField>
    <fullName>AssociadoTabelaPulicado__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Associado a Tabela Pulicado ?</label>
    <type>Checkbox</type>
</CustomField>