force-app/main/default/objects/Product2/fields/CorReservado__c.field-meta.xml
<CustomField>
    <fullName>CorReservado__c</fullName>
    <formula>IF(ISPICKVAL(Status__c, &apos;Reservada&apos;), &apos;#1E90FF&apos;, &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CorReservado</label>
    <type>Text</type>
</CustomField>