force-app/main/default/objects/Product2/fields/DataDeReserva__c.field-meta.xml
<CustomField>
    <fullName>DataDeReserva__c</fullName>
    <description>Campo para estipular quantidade de tempo de reserva de um produto</description>
    <label>Data de reserva</label>
    <type>Date</type>
</CustomField>