force-app/main/default/objects/Product2/fields/Enquadramento__c.field-meta.xml
<CustomField>
    <fullName>Enquadramento__c</fullName>
    <label>Enquadramento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>HIS</fullName>
            </value>
            <value>
                <fullName>HMP</fullName>
            </value>
            <value>
                <fullName>R2V</fullName>
            </value>
            <value>
                <fullName>Comercial</fullName>
                <isActive>false</isActive>
                <label>Comercial</label>
            </value>
            <value>
                <fullName>Hotel</fullName>
                <isActive>false</isActive>
                <label>Hotel</label>
            </value>
            <value>
                <fullName>LJ</fullName>
                <isActive>false</isActive>
                <label>LJ</label>
            </value>
            <value>
                <fullName>NR</fullName>
                <isActive>false</isActive>
                <label>NR</label>
            </value>
            <value>
                <fullName>UH</fullName>
                <isActive>false</isActive>
                <label>UH</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>