force-app/main/default/objects/Product2/fields/FracaoIdeal__c.field-meta.xml
<CustomField>
    <fullName>FracaoIdeal__c</fullName>
    <label>Fração ideal</label>
    <precision>14</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>