force-app/main/default/objects/Product2/fields/Identificao_da_Unidade__c.field-meta.xml
<CustomField>
    <fullName>Identificao_da_Unidade__c</fullName>
    <description>Identificação da Unidade</description>
    <label>Identificação da Unidade</label>
    <length>200</length>
    <type>Text</type>
</CustomField>