force-app/main/default/objects/Product2/fields/InclusoKit__c.field-meta.xml
<CustomField>
    <fullName>InclusoKit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Incluso em Kit ?</label>
    <type>Checkbox</type>
</CustomField>