force-app/main/default/objects/Product2/fields/Metragem_da_Unidade__c.field-meta.xml
<CustomField>
    <fullName>Metragem_da_Unidade__c</fullName>
    <description>Metragem da unidade</description>
    <label>Metragem da Unidade</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>