force-app/main/default/objects/Product2/fields/Numero_da_Unidade__c.field-meta.xml
<CustomField>
    <fullName>Numero_da_Unidade__c</fullName>
    <description>Número da unidade que irá no contrato de venda</description>
    <label>Número da Unidade</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>