force-app/main/default/objects/Product2/fields/Numero_da_Unidade_no_Espelho__c.field-meta.xml
<CustomField>
    <fullName>Numero_da_Unidade_no_Espelho__c</fullName>
    <description>Número da unidade que irá no contrato de venda</description>
    <label>Número da Unidade no Espelho</label>
    <length>200</length>
    <type>Text</type>
</CustomField>