force-app/main/default/objects/Product2/fields/Numero_de_Suites__c.field-meta.xml
<CustomField>
    <fullName>Numero_de_Suites__c</fullName>
    <label>Número de Suítes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>