force-app/main/default/objects/Product2/fields/Numero_de_Vagas_Incorporadas__c.field-meta.xml
<CustomField>
    <fullName>Numero_de_Vagas_Incorporadas__c</fullName>
    <label>Número de Vagas Incorporadas</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>