force-app/main/default/objects/Product2/fields/NumeroDaUnidade__c.field-meta.xml
<CustomField>
    <fullName>NumeroDaUnidade__c</fullName>
    <label>Número da Unidade</label>
    <length>255</length>
    <type>Text</type>
</CustomField>