force-app/main/default/objects/Product2/fields/QuantidadeQuartos__c.field-meta.xml
<CustomField>
    <fullName>QuantidadeQuartos__c</fullName>
    <label>Quantidade de quartos</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>