force-app/main/default/objects/Product2/fields/QuantidadeSuites__c.field-meta.xml
<CustomField>
    <fullName>QuantidadeSuites__c</fullName>
    <label>Quantidade de suítes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>