force-app/main/default/objects/Product2/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Status da unidade</description>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Reservada</fullName>
            </value>
            <value>
                <fullName>Vendida</fullName>
            </value>
            <value>
                <fullName>Disponivel</fullName>
            </value>
            <value>
                <fullName>&lt;&lt;LISTAR STATUS&gt;&gt;</fullName>
                <isActive>false</isActive>
                <label>&lt;&lt;LISTAR STATUS&gt;&gt;</label>
            </value>
            <value>
                <fullName>Contrato Assinado</fullName>
                <isActive>false</isActive>
                <label>Contrato Assinado</label>
            </value>
            <value>
                <fullName>Contrato Emitido</fullName>
                <isActive>false</isActive>
                <label>Contrato Emitido</label>
            </value>
            <value>
                <fullName>Negociação</fullName>
                <isActive>false</isActive>
                <label>Negociação</label>
            </value>
            <value>
                <fullName>Permuta</fullName>
                <isActive>false</isActive>
                <label>Permuta</label>
            </value>
            <value>
                <fullName>Reserva condicional</fullName>
                <isActive>false</isActive>
                <label>Reserva condicional</label>
            </value>
            <value>
                <fullName>SD Fora de Venda</fullName>
                <isActive>false</isActive>
                <label>SD Fora de Venda</label>
            </value>
            <value>
                <fullName>Venda Integrada</fullName>
                <isActive>false</isActive>
                <label>Venda Integrada</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>