force-app/main/default/objects/Product2/fields/Status_ERP__c.field-meta.xml
<CustomField>
    <fullName>Status_ERP__c</fullName>
    <label>Status ERP</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>&lt;&lt;Status ERP&gt;&gt;</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>