force-app/main/default/objects/Product2/fields/Tipo_de_Registro__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_Registro__c</fullName>
    <label>Tipo de Registro</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Apartamento</fullName>
            </value>
            <value>
                <fullName>Casa</fullName>
            </value>
            <value>
                <fullName>Lote</fullName>
            </value>
            <value>
                <fullName>Vaga</fullName>
            </value>
            <value>
                <fullName>Comercial</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>