force-app/main/default/objects/Product2/fields/Tipo_de_Unidade__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_Unidade__c</fullName>
    <description>Tipo da unidade</description>
    <label>Tipo de Unidade</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Padrão</fullName>
            </value>
            <value>
                <fullName>Térreo</fullName>
            </value>
            <value>
                <fullName>Cobertura</fullName>
            </value>
            <value>
                <fullName>PCD</fullName>
            </value>
            <value>
                <fullName>Vaga Coberta</fullName>
            </value>
            <value>
                <fullName>Vaga Descoberta</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>