force-app/main/default/objects/Product2/fields/Valor_do_Metro__c.field-meta.xml
<CustomField>
    <fullName>Valor_do_Metro__c</fullName>
    <description>Valor do Metro</description>
    <label>Valor do Metro</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>