force-app/main/default/objects/Product2/recordTypes/Consultorio.recordType-meta.xml
<RecordType>
    <fullName>Consultorio</fullName>
    <active>true</active>
    <label>Consultorio</label>
</RecordType>