force-app/main/default/objects/Product2/recordTypes/Fachada_Ativa.recordType-meta.xml
<RecordType>
    <fullName>Fachada_Ativa</fullName>
    <active>true</active>
    <label>Fachada Ativa</label>
</RecordType>