force-app/main/default/objects/Product2/recordTypes/Sala_Comercial.recordType-meta.xml
<RecordType>
    <fullName>Sala_Comercial</fullName>
    <active>true</active>
    <label>Sala Comercial</label>
</RecordType>