force-app/main/default/objects/Product2/recordTypes/Servico_Moradia.recordType-meta.xml
<RecordType>
    <fullName>Servico_Moradia</fullName>
    <active>true</active>
    <label>Serviço de Moradia</label>
</RecordType>