force-app/main/default/objects/Product2/recordTypes/Unidade_Hoteleira.recordType-meta.xml
<RecordType>
    <fullName>Unidade_Hoteleira</fullName>
    <active>true</active>
    <label>Unidade Hoteleira</label>
</RecordType>