force-app/main/default/objects/Product2/validationRules/ValidacaoMudancaStatus.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidacaoMudancaStatus</fullName>
    <active>false</active>
    <description>Valida as mudanças de status da unidade, somente o Administrador do Sistema pode fazer as alterações livremente do campo status</description>
    <errorConditionFormula>OR(
    AND(
        ISPICKVAL(Status__c, &apos;Disponivel&apos;),
        ISCHANGED(Status__c),
        NOT($Profile.Name = &apos;Administrador do Sistema&apos;)
    ),

    AND(
        ISPICKVAL(Status__c, &apos;Reservada&apos;),
        ISCHANGED(Status__c),
        NOT($Profile.Name = &apos;Administrador do Sistema&apos;)
    ),

    AND(
        ISPICKVAL(Status__c, &apos;Vendido&apos;),
        ISCHANGED(Status__c),
        NOT($Profile.Name = &apos;Administrador do Sistema&apos;)
    )
)</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>Somente o Administrador do Sistema pode fazer as alterações</errorMessage>
</ValidationRule>